Incorporated changes from first draft review.

--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -16,22 +16,18 @@
 
 \vspace{12pt}
 
-This past year started off as a repeat of the difficult year the
-Association experienced in 2014. Consequently there was little news
-and less enthusiasm for publishing the Chronicle on any regular
-basis. However, as a result of changes to the management of the museum
-organization there is a renewed sense of hope that we will be able to
-move forward in 2016, as expressed in the Notes from the
-President. One of those changes is the appointment of Chris Kitzan as
-the new director general of CASM. You will find a message from Chris
-in this edition. Chris and his boss Alex Benay, the CEO of the museum
-corporation, are enthusiastic supporters of our organization. We are also
-commencing a new feature highlighting the members of our Association
-and starting off with Bruce Gemmill, our Project Manager. In addition,
-we are adding a "Miscellany" feature which lists items of interest to
-our members. If any of our readers wish to contribute an article, have
-suggestions for future articles, have suggestions for the "Miscellany"
-feature, or have any comments about the Chronicle please let me know.
+As the President has noted the Association has, through its volunteers,
+expended thousands of hours on the North Star's restoration since 2004. In the
+last couple of years, however, various developments at CASM have resulted in a
+diminution in the amount of restoration work we have been able to do. The result
+has been a decline in the number of volunteers working on the aircraft, and a
+corresponding decline in our membership. This in turn has led to an overall
+decline in the Association's activities, including the publication of this
+newsletter. CASM has made some major changes to its personnel, including those
+directly responsible for the restoration of the North Star. The Association is
+already experiencing a positive change in its relationship with the Museum which
+can only be to the good. We look forward to a renewed partnership with CASM to
+our mutual benefit.
 
 %\vspace{12pt}
 
