--- a/pnsac/newsletter/article_Feature1.tex
+++ b/pnsac/newsletter/article_Feature1.tex
@@ -4,24 +4,71 @@
 
 % Head
 
-\title{Volunteers Working on North Star Restoration}
+\title{Reunion of Giants}
 %\subtitle{Part 4}
-\author{Tom MacGregor, Legion Magazine}
+\author{Bruce Grant}
 
 \maketitle
 
 % \textit{Photos courtesy of Library Archives Canada and 426 Thunderbird
 %  Sqn, RCAF.}\\
 
-\begin{quotation}
-	\textit{You have to be careful opening up the panels covering the 
-	engines, you never know if a bird or some animal might have made
-	its home there.}
-\end{quotation}
+The "Reunion of Giants" video came to the Canadian Aviation and Space Museum's
+theatre on May 14th, courtesy of the Canadian Warplane Heritage Museum in
+Hamilton. CWHM sent along the pilot Captain Leon Evans (retired Air Canada), and
+Dave Rohrer, CEO, as well as Morgan Elliott the videographer. Also present were
+two World War Two decorated Lancaster pilots Don McKechnie and Bill Button. With
+almost a full house of 200 it was a very successful Project North Star public
+event.
 
-That's one lesson a group of dedicated volunteers has learned in its
-10 years of painstaking work restoring a Royal Canadian Air Force
-North Star aircraft at the Canada Aviation and Space Museum in Ottawa.
+
+The outstanding feature of the story is the audacity of CWHM to fly Canada's
+only airworthy Lancaster to England for a reunion with the only other flying
+Lancaster in the world. The Lanc is the flagship of the CWHM, its biggest
+attraction and an irreplaceable historic artifact. In a typical year it flies
+only about fifty hours, attending aviation events in Canada and every move is
+calculated some years in advance.
+
+
+In England, the arrival over the North Atlantic route of our Lanc was embraced
+as a tribute to the quality of the machine and the courage of its crew. It
+reinforced the link with Canada which provided so much support to Great Britain
+during the war.
+
+
+While on a final approach in England, the supercharger on engine \#3 went to
+pieces and the plane landed with a trail of smoke. A replacement engine would
+have to be found. The replacement that turned up was a Rolls Royce Merlin that
+would have to be substituted for the Packard Merlin in our Canadian-built
+Lancaster. This presented a challenge in sorting out the elements of QEC with
+incompatible Whitworth and SAE fasteners. The new engine would be a "bitsa"
+(bitsa this and bitsa that). They did it in about three days and got the plane
+back in the air.
+
+
+On the return flight, stronger than anticipated headwinds raised the risk of
+running out of gas over the Davis Strait. They diverted to Narsarsuaq in
+Greenland.
+
+
+Following the showing of the film there was a spirited question and answer
+session with CWHM's representatives moderately by Mike Pearson (retired Air
+Canada pilot of the Gimli glider fame). There is no doubt that all those in
+attendance enjoyed themselves thoroughly and gained some understanding of what
+it meant for those involved in this project.
+
+
+At Project North Star, we have some appreciation idea of the scale of CWHM's
+accomplishment. As our members know we are in the twelfth year of our project to
+restore the last surviving North Star. But, we are restoring it only as a museum
+artifact, not an airworthy machine. The video is available for sale at
+www.warplane.com and the trailer can be viewed ath www.suddenlyseemore.com .
+
+%\begin{quotation}
+%	\textit{You have to be careful opening up the panels covering the 
+%	engines, you never know if a bird or some animal might have made
+%	its home there.}
+%\end{quotation}
 
 %\begin{figure*}[htbp]
 %	\vspace{2em}
@@ -35,103 +82,8 @@ North Star aircraft at the Canada Aviation and Space Museum in Ottawa.
 %	\label{fig:op-hawk-one.eps}
 %\end{figure*}
 
-The aircraft had sat neglected outside the museum for
-years. "Essentially, the RCAF flew this one into the Rockcliffe Airport
-when it was decommissioned. It sat in a field until Robert Holmgren said
-someone should do something about it," said project manager Bruce
-Gemmill.
 
-The airplane had been stripped of its non-essential gear and turned
-over to what was then the National Aeronautical Collection, housed in
-hangars built during the Second World War at the former RCAF station
-at Rockcliffe in Ottawa. Time and weather took its toll. Birds and
-animals made nests where they could get inside the panelling.
-
-"We approached the museum about restoring the aircraft. At first, they
-didn't know how to take us," said Gemmill. "The museum had its own
-professional conservation staff but it had never worked with a team of
-volunteers."
-
-Eventually the museum agreed to work with the volunteers who formed
-the Project North Star Association of Canada with the late Robert
-Holmgren as president. "We became the model for other volunteer groups
-now working with the museum," said the association's current
-president, Richard Lodge.
-
-Now the aircraft gets towed into a hangar where it is available to the
-volunteers between September and May before it is towed outside for
-the summer.
-
-The North Star was built by Canadair in the late 1940s and 1950s. It
-was the RCAF version of the DC-4 civilian aircraft except that it used
-four Rolls-Royce Merlin engines. Canadair built 71 of the aircraft.
-
-The RCAF assigned the first North Stars to 412 Squadron where they
-transported VIPs and were used in various transfigurations for
-reliable, long-range transport services.
-
-During the Korean War the North Star was used by No. 426 (Thunderbird)
-Sqdn. to ferry supplies across the Pacific Ocean to Japan (Operation
-Hawk: The Korean Airlift, July/August). They would fly 599 round trips
-over the Pacific and deliver seven million pounds of cargo and 13,000
-personnel on return trips. All this was achieved without a fatal
-crash.
-
-Most of the air force's North Stars were declared surplus in the
-1970s.
-
-In the 10 years that Project North Star has been in operation, the
-group has restored two of the four Merlin engines with a third one
-nearly completed.
-
-Each engine had to be taken o the aircraft, brought into the museum's
-shops where they were taken apart. Each item was tagged, catalogued 
-and usually photographed. "We take a lot of photographs. That's
-how we know how they go back together," said Lodge.
-
-Engine project leader Garry Dupont said, "The first engine took us about
-four and a half years to restore. We're almost finished the third engine
-which as taken us about two years. So we are getting faster." The
-propellers were restored separately by Hope Aero Propeller and
-Components Inc. in Mississauga, Ont. All restoration work has to be up
-to the professional standards set by the museum.
-
-The group plans to restore the aircraft to its original look, not to
-have it fly again.
-
-Lodge said that they have some RCAF manuals but a lot of time they do
-not help when it comes to putting 50-year-old parts together today.
-
-The aircraft itself, 17515, has seen countless hours of work put into
-restoring the cockpit with all its switches and navigation
-equipment and a small galley for the crew of seven.
-
-Still to be done is work in the cargo section and painting the
-exterior of the aircraft.
-
-"We know this aircraft flew during the Korean War. In fact, we have 
-pictures showing it configured with litters to bring the wounded back to
-Canada," said Gemmill. "We don't want to put in the litters but we
-have people working on creating the rope seats that were used."
-
-The plan is to paint the aircraft to its post-1965 markings, since it
-was painted with the Maple Leaf flag on it.
-
-Still the search goes on to find new members for the association. "The
-important thing is to find new people to whom we can pass on this 
-knowledge and skills we are developing," said Lodge.
-
-\textit{Reprinted from the March/April 2014 edition of "Legion Magazine," with the kind permission of Jennifer Morse, General Manager of Canvet Publications, and Tom MacGregor.}
-
-
-
-
-
-
-
-
-
-
+%\textit{Reprinted from the March/April 2014 edition of "Legion Magazine," with the kind permission of Jennifer Morse, General Manager of Canvet Publications, and Tom MacGregor.}
 
 
 \begin{footnotesize}
