--- a/pnsac/newsletter/article_MemberInterview.tex
+++ b/pnsac/newsletter/article_MemberInterview.tex
@@ -5,36 +5,68 @@
 % Head
 
 \title{Our Members}
-\author{Interview with Bruce Gemmill}
+\author{Interview with Jm Riddoch}
 
 \maketitle
 
 \end{multicols}
 
 \begin{quotation}
-	\textit{Bruce Gemmill has been involved with Project North Star since 2005 and	has exceeded 9,000 volunteer hours. Bruce is presently the Project Manager, as well as a member of the board of directors.}
+	\textit{Jim Riddoch is one of the earliest and longest serving members of the
+Association. He has made a significant contribution to the operations of the
+Association including working on the aircraft as well as being an officer and
+member of the board of directors. Although officially retired from formal
+positions in the organization, he can still be counted on to help out when
+needed.}
 \end{quotation}
 
 \begin{multicols}{2}
 
 1.\textit{What is your background in aviation?}
 
-Before joining Project North Star, I served in the Canadian Forces for
-38 years as a communications and electronics officer.  Although I
-never flew as air crew, I worked on air force communications and radar
-systems, air traffic control, and NORAD air defence.  I served on
-several air force bases, including North Bay and Trenton, and my last
-air force position was senior communications adviser to the Commander
-of Canadian NORAD Region in Winnipeg.
+I started with English Electric Aviation Company in 1956 as an
+apprentice technician eventually being assigned to the Mechanical
+Engineering Department as a fuel systems technician. I remained there
+for 5 years until I was 28 years old and married with a daughter. After
+immigrating to Canada in March 1966 I joined DeHavilland Spar Division
+in Malton and then moved to Montreal with Jarry Hydraulics as a
+development engineer. I remained there for 2 years working chiefly on
+development proposals for the wing sweep actuators for F111 aircraft
+and Boeing's proposed supersonic Concorde.
+
+In 1968 I joined Air Canada as a junior engineer in the Mechanical
+Systems Department and assigned as a landing gear technologist until I
+achieved Professional Engineer status in 1974. I then moved around
+several other departments in engineering and maintenance until I was
+promoted to Superintendent of DC9 maintenance. In that capacity I was
+involved in the accident investigation into the loss of one aircraft at
+Cincinnati.
+
+I eventually returned to engineering as Director of Interior Systems and
+Equipment to supervise extensive fleet modifications and new aircraft
+acquisitions. I remained in that position until I retired in 1990.
+Following a short stint with First Air I was asked to join a newly formed
+Canadian Aviation Maintenance Council to standardize aircraft
+maintenance trades basic training. I was hired as the Accreditation
+Manager to approve various training establishments including schools,
+companies and military programs, I eventually also took on the job of
+Registration Manager to accept qualified trade technicians.
 
 2. \textit{How long have you been involved with Project North Star and how and why did you get involved?}
 
-After I retired from the Canadian Forces in 2005, I wanted to do
-something that was technically challenging and interesting.  I'd done
-some woodworking and motorcycle restoration, and one day I was riding
-past the Aviation Museum and decided on a whim I would ask if there
-was an opportunity to volunteer on an aircraft restoration project.
-Six months later I started on Project North Star.
+Following my retirement from the Canadian Aviation Maintenance
+Council in 2003 I was approached by Robert Holmgren to participate in
+a voluntary program to help restore an the Canadair North Star aircraft
+parked outside at the Canada Aviation Museum. Along with Tim
+Timmins and a few others we formed a steering committee to approach
+the Museum about forming a voluntary work force to assist the museum
+staff to restore the aircraft. At first we met with opposition from some
+staff members who felt their jobs were being compromised and possible
+staff reductions. Slowly we were approved by the Museum staff with
+limited supervision and controlled access and work direction. I was
+assigned by the Project North Star Association as Chief Engineer of the
+project although all work was controlled and supervised by the
+Museum's staff manager.
 
 %\begin{figure}[htbp]
 %   \vspace{2em}
@@ -49,86 +81,55 @@ Six months later I started on Project North Star.
 
 3. \textit{What has been the history of your involvement to date?}
 
-Since I had no specific aircraft maintenance training or experience, I
-began working on electronic assemblies that had been removed from the
-aircraft cockpit during the early days of the project.  With no test
-equipment, manuals or spare parts, the work was mainly cleaning and
-repainting the cases and front panels.  As I got more familiar with
-the equipment, I learned how to spray paint, and did minor repairs to
-wiring.  I also worked on electrical components from the Merlin
-engine, such as the magnetos and starter motor. 
+I worked on the Project for 10 years starting in 2003 both as a “hands
+on” volunteer as well as a member of the board of directors and officer
+of the Association. Generally I put in at least two days per week and
+sometimes more. 
 
-\begin{figure}[htbp]
-	\vspace{2em}
-	\centering
-	%name of the graphic, without the path AND in EPS format:
-	\includegraphics[scale=0.9]{resources/PNS2008-10-26_23-31-42.png}
-	%caption of the figure 
-	\caption*{\small \em Propeller assembly.}
-	%label of the figure, which has to correspond to \ref{}:
-	\label{fig:propeller}
-\end{figure}
+%\begin{figure}[htbp]
+%	\vspace{2em}
+%	\centering
+%	%name of the graphic, without the path AND in EPS format:
+%	\includegraphics[scale=0.9]{resources/PNS2008-10-26_23-31-42.png}
+%	%caption of the figure 
+%	\caption*{\small \em Propeller assembly.}
+%	%label of the figure, which has to correspond to \ref{}:
+%	\label{fig:propeller}
+%\end{figure}
 
-The most demanding job was removing several of the propellers so they could be shipped for restoration.  Years of corrosion had sealed the spinners onto the propeller hubs.  Removal required the use of dental picks and a large sledge hammer!
-
-
-After helping with restoration work on Engine One, I began working on
-the cockpit as a major project.  I spent approximately five years
-working with other volunteers, beginning with removal of as much
-equipment as possible from the cockpit and crew lounge, including the
-control column, rudder pedals and center control console, seats and
-headliners.  A lot of time was spent cleaning and repairing corrosion
-damage before painting the cockpit and installing new insulation.  I
-found it very rewarding when we began installing previously restored
-equipment to the "new" cockpit, but also very challenging. 
-
-\begin{figure}[htbp]
-	\vspace{2em}
-	\centering
-	%name of the graphic, without the path AND in EPS format:
-	\includegraphics[scale=1.3]{resources/NorthStarCockpitDec2011.png}
-	%caption of the figure 
-	\caption*{\small \em Forward cockpit -- complete.}
-	%label of the figure, which has to correspond to \ref{}:
-	\label{fig:fwd_cockpit_complete}
-\end{figure}
-
- A lot of equipment and fittings had been removed prior to me joining the project, and not all removal work had been documented.  Detective work was required to search out photographs that showed where some equipment was installed.
+%\begin{figure}[htbp]
+%	\vspace{2em}
+%	\centering
+%	%name of the graphic, without the path AND in EPS format:
+%	\includegraphics[scale=1.3]{resources/NorthStarCockpitDec2011.png}
+%	%caption of the figure 
+%	\caption*{\small \em Forward cockpit -- complete.}
+%	%label of the figure, which has to correspond to \ref{}:
+%	\label{fig:fwd_cockpit_complete}
+%\end{figure}
 
 4. \textit{What has been the highlight of your involvement?}
 
-Completion of the cockpit and crew lounge has certainly been the most
-significant achievement for me personally. The project team has
-received high praise from numerous visitors who have commented on the
-high quality of the restoration work.  Although we consider the work
-done, I do still want to complete the restoration by finding a few
-missing radios and instruments that were removed by the RCAF.
+The chief highlights have been the high level of workmanship of the
+volunteers and displaying the aircraft to the public and interested
+persons.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.75]{resources/NavigatorRack.png}
-   %caption of the figure 
-   \caption*{\small \em Navigator rack.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:nav-radio-rack}
-\end{figure}
+%\begin{figure}[htbp]
+%   \vspace{2em}
+%   \centering
+%   %name of the graphic, without the path AND in EPS format:
+%   \includegraphics[scale=0.75]{resources/NavigatorRack.png}
+%   %caption of the figure 
+%   \caption*{\small \em Navigator rack.}
+%   %label of the figure, which has to correspond to \ref{}:
+%   \label{fig:nav-radio-rack}
+%\end{figure}
 
 5. \textit{What has been the most challenging part of your involvement?}
 
-Finding spare and missing parts for the aircraft has always been a
-challenge.  Our ability to search out possible sources is limited, as
-are funds.  We have been lucky to get most parts needed for the Rolls
-Royce engines, but many items for the airframe are not easy to come
-by.  These include everything from very large and expensive items,
-such as the de-icing boots for the wings and tail, to door and window
-seals.  Rubber and fabric items are particularly hard to find, since
-these items deteriorate with age.  Finding the correct paint has
-recently become a major challenge because of stricter environmental
-laws.  Our goal of achieving an authentic restoration of the North
-Star will only become more difficult with the passage of time.
-
+Keeping the Museum staff and management on side with our goals
+and objectives and recruiting enough new volunteers to keep the
+project going.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
