--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -87,14 +87,14 @@
 	\input{article_ProgReport} 
 \end{article}
 
-%\pagebreak
+\pagebreak
 
 % Member interview ................................................... %
 
 % Report
-%\begin{article}
-%    \input{article_MemberInterview} 
-%\end{article}
+\begin{article}
+    \input{article_MemberInterview} 
+\end{article}
 
 \pagebreak
 
@@ -103,9 +103,9 @@
 
 % Feature article
 
-%\begin{article}
-%	\input{article_Feature1} 
-%\end{article}
+\begin{article}
+	\input{article_Feature1} 
+\end{article}
 
 %\pagebreak
 
@@ -126,9 +126,9 @@
 
 % Recent events ...................................................... %
 
-%\begin{article}                 
-%	\input{article_RecentEvents}
-%\end{article}
+\begin{article}                 
+	\input{article_RecentEvents}
+\end{article}
 
 %\pagebreak
 
